--- a/backend/static/dashboard.html
+++ b/backend/static/dashboard.html
@@ -298,46 +298,121 @@
                     <div class="col-lg-6">
                         <div class="card h-100">
                             <div class="card-header bg-white border-0 pt-3">
-                                <h5 class="card-title fw-bold"><i class="fas fa-cogs text-primary me-2"></i>推桿運作監控</h5>
+                                <h5 class="card-title fw-bold"><i class="fas fa-microchip text-success me-2"></i>樹莓派監控
+                                </h5>
+                            </div>
+                            <div class="card-body">
+                                <div class="row g-2">
+                                    <div class="col-4">
+                                        <div class="p-2 bg-light rounded text-center">
+                                            <small class="text-muted">電壓</small>
+                                            <div class="fw-bold"><span id="test-rpi-voltage">--</span> V</div>
+                                        </div>
+                                    </div>
+                                    <div class="col-4">
+                                        <div class="p-2 bg-light rounded text-center">
+                                            <small class="text-muted">電流</small>
+                                            <div class="fw-bold"><span id="test-rpi-current">--</span> A</div>
+                                        </div>
+                                    </div>
+                                    <div class="col-4">
+                                        <div class="p-2 bg-light rounded text-center">
+                                            <small class="text-muted">功率</small>
+                                            <div class="fw-bold text-success"><span id="test-rpi-power">--</span> W
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 推桿監控區塊 -->
+                <div class="row mt-3">
+                    <div class="col-lg-6">
+                        <div class="card h-100">
+                            <div class="card-header bg-white border-0 pt-3">
+                                <h5 class="card-title fw-bold"><i class="fas fa-arrows-alt-v text-primary me-2"></i>南北推桿
+                                </h5>
+                            </div>
+                            <div class="card-body">
+                                <div class="row g-2">
+                                    <div class="col-6">
+                                        <div class="p-3 bg-light rounded text-center">
+                                            <div class="stat-label">當前角度</div>
+                                            <div class="stat-value text-primary"><span id="test-ns-angle">--</span>
+                                                <small class="fs-6">°</small></div>
+                                        </div>
+                                    </div>
+                                    <div class="col-6">
+                                        <div class="p-3 bg-light rounded text-center">
+                                            <div class="stat-label">伸展長度</div>
+                                            <div class="stat-value"><span id="test-ns-extension">--</span> <small
+                                                    class="fs-6">mm</small></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6">
+                        <div class="card h-100">
+                            <div class="card-header bg-white border-0 pt-3">
+                                <h5 class="card-title fw-bold"><i class="fas fa-arrows-alt-h text-warning me-2"></i>東西推桿
+                                </h5>
+                            </div>
+                            <div class="card-body">
+                                <div class="row g-2">
+                                    <div class="col-6">
+                                        <div class="p-3 bg-light rounded text-center">
+                                            <div class="stat-label">當前角度</div>
+                                            <div class="stat-value text-warning"><span id="test-ew-angle">--</span>
+                                                <small class="fs-6">°</small></div>
+                                        </div>
+                                    </div>
+                                    <div class="col-6">
+                                        <div class="p-3 bg-light rounded text-center">
+                                            <div class="stat-label">伸展長度</div>
+                                            <div class="stat-value"><span id="test-ew-extension">--</span> <small
+                                                    class="fs-6">mm</small></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 推桿總功率 -->
+                <div class="row mt-3">
+                    <div class="col-12">
+                        <div class="card">
+                            <div class="card-header bg-white border-0 pt-3">
+                                <h5 class="card-title fw-bold"><i class="fas fa-cogs text-danger me-2"></i>推桿總功率</h5>
                             </div>
                             <div class="card-body">
                                 <div class="row g-3">
-                                    <div class="col-12">
-                                        <div class="p-3 rounded text-center energy-card mb-2">
-                                            <div class="stat-label text-primary">今日推桿累積耗能</div>
-                                            <div class="stat-value text-primary">
-                                                <span id="test-actuator-energy">0.00</span>
-                                                <small class="fs-6">Wh</small>
+                                    <div class="col-md-4">
+                                        <div class="p-3 bg-light rounded text-center">
+                                            <small class="text-muted">總電壓</small>
+                                            <div class="fs-4 fw-bold"><span id="test-actuator-total-voltage">--</span> V
                                             </div>
-                                            <small class="text-muted" style="font-size: 0.75rem;">(電壓 x 電流 積分計算)</small>
                                         </div>
                                     </div>
-
-                                    <div class="col-6">
-                                        <div class="p-3 bg-light rounded text-center h-100">
-                                            <div class="stat-label">即時功率</div>
-                                            <div class="stat-value"><span id="test-actuator-power">--</span> <small
-                                                    class="fs-6">W</small></div>
+                                    <div class="col-md-4">
+                                        <div class="p-3 bg-light rounded text-center">
+                                            <small class="text-muted">總電流</small>
+                                            <div class="fs-4 fw-bold"><span id="test-actuator-total-current">--</span> A
+                                            </div>
                                         </div>
                                     </div>
-                                    <div class="col-6">
-                                        <div class="p-3 bg-light rounded text-center h-100">
-                                            <div class="stat-label">當前角度</div>
-                                            <div class="stat-value"><span id="test-actuator-angle">--</span> <small
-                                                    class="fs-6">°</small></div>
-                                        </div>
-                                    </div>
-
-                                    <div class="col-6">
-                                        <div class="border-end text-center">
-                                            <small class="text-muted">推桿電壓</small>
-                                            <div class="fs-5 fw-bold"><span id="test-actuator-voltage">--</span> V</div>
-                                        </div>
-                                    </div>
-                                    <div class="col-6">
-                                        <div class="text-center">
-                                            <small class="text-muted">推桿電流</small>
-                                            <div class="fs-5 fw-bold"><span id="test-actuator-current">--</span> A</div>
+                                    <div class="col-md-4">
+                                        <div class="p-3 bg-danger bg-opacity-10 rounded text-center">
+                                            <small class="text-muted">即時功率</small>
+                                            <div class="fs-4 fw-bold text-danger"><span
+                                                    id="test-actuator-total-power">--</span> W</div>
                                         </div>
                                     </div>
                                 </div>
