--- a/backend/static/dashboard.html
+++ b/backend/static/dashboard.html
@@ -222,11 +222,13 @@
             <div id="test-system" class="tab-pane fade" style="display: none;">
                 <div class="d-flex justify-content-between align-items-center mb-4">
                     <h3 class="fw-bold">測試系統詳細數據</h3>
-                    <div>
-                        <button class="btn btn-primary" onclick="refreshSiteData('test', 10)"><i
-                                class="fas fa-sync-alt"></i> 立即刷新</button>
-                        <button class="btn btn-outline-secondary" onclick="exportSiteData(10)"><i
-                                class="fas fa-file-export"></i> 匯出數據</button>
+                    <div class="d-flex gap-2 mb-3">
+                        <button class="btn btn-primary" onclick="refreshSiteData('test', 1)">
+                            <i class="fas fa-sync-alt me-2"></i>立即刷新
+                        </button>
+                        <a href="/api/power-records/export_csv/?system=1" class="btn btn-success" download>
+                            <i class="fas fa-file-download me-2"></i>匯出數據
+                        </a>
                     </div>
                 </div>
 
@@ -312,7 +314,7 @@
                                     <div class="col-4">
                                         <div class="p-2 bg-light rounded text-center">
                                             <small class="text-muted">電流</small>
-                                            <div class="fw-bold"><span id="test-rpi-current">--</span> A</div>
+                                            <div class="fw-bold"><span id="test-rpi-current">--</span> mA</div>
                                         </div>
                                     </div>
                                     <div class="col-4">
@@ -342,7 +344,8 @@
                                         <div class="p-3 bg-light rounded text-center">
                                             <div class="stat-label">當前角度</div>
                                             <div class="stat-value text-primary"><span id="test-ns-angle">--</span>
-                                                <small class="fs-6">°</small></div>
+                                                <small class="fs-6">°</small>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="col-6">
@@ -369,7 +372,8 @@
                                         <div class="p-3 bg-light rounded text-center">
                                             <div class="stat-label">當前角度</div>
                                             <div class="stat-value text-warning"><span id="test-ew-angle">--</span>
-                                                <small class="fs-6">°</small></div>
+                                                <small class="fs-6">°</small>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="col-6">
@@ -404,61 +408,62 @@
                                     <div class="col-md-4">
                                         <div class="p-3 bg-light rounded text-center">
                                             <small class="text-muted">總電流</small>
-                                            <div class="fs-4 fw-bold"><span id="test-actuator-total-current">--</span> A
-                                            </div>
+                                            <div class="fs-4 fw-bold"><span id="test-actuator-total-current">--</span>
+                                                mA</div>
                                         </div>
                                     </div>
-                                    <div class="col-md-4">
-                                        <div class="p-3 bg-danger bg-opacity-10 rounded text-center">
-                                            <small class="text-muted">即時功率</small>
-                                            <div class="fs-4 fw-bold text-danger"><span
-                                                    id="test-actuator-total-power">--</span> W</div>
-                                        </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="p-3 bg-danger bg-opacity-10 rounded text-center">
+                                        <small class="text-muted">即時功率</small>
+                                        <div class="fs-4 fw-bold text-danger"><span
+                                                id="test-actuator-total-power">--</span> W</div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+            </div>
 
-                <div class="card p-3 mt-4">
-                    <div class="d-flex align-items-center">
-                        <h6 class="mb-0 me-3">自動刷新頻率：</h6>
-                        <div class="btn-group btn-group-sm">
-                            <button class="btn btn-outline-primary"
-                                onclick="setTabRefreshInterval('test-system', 3000)">3秒</button>
-                            <button class="btn btn-outline-primary"
-                                onclick="setTabRefreshInterval('test-system', 5000)">5秒</button>
-                            <button class="btn btn-outline-primary"
-                                onclick="setTabRefreshInterval('test-system', 10000)">10秒</button>
-                            <button class="btn btn-outline-danger" onclick="stopTabRefresh('test-system')">停止</button>
-                        </div>
-                        <span class="ms-3 text-muted small" id="refresh-status-test">狀態: 待啟動</span>
+            <div class="card p-3 mt-4">
+                <div class="d-flex align-items-center">
+                    <h6 class="mb-0 me-3">自動刷新頻率：</h6>
+                    <div class="btn-group btn-group-sm">
+                        <button class="btn btn-outline-primary"
+                            onclick="setTabRefreshInterval('test-system', 3000)">3秒</button>
+                        <button class="btn btn-outline-primary"
+                            onclick="setTabRefreshInterval('test-system', 5000)">5秒</button>
+                        <button class="btn btn-outline-primary"
+                            onclick="setTabRefreshInterval('test-system', 10000)">10秒</button>
+                        <button class="btn btn-outline-danger" onclick="stopTabRefresh('test-system')">停止</button>
                     </div>
-                    <div id="test-status" class="mt-2 small"></div>
+                    <span class="ms-3 text-muted small" id="refresh-status-test">狀態: 待啟動</span>
                 </div>
-
-                <div class="card p-4 mt-4">
-                    <h5 class="card-title mb-3">最新 5 筆記錄</h5>
-                    <div id="test-records" class="table-responsive">
-                        <div class="text-center text-muted">載入記錄中...</div>
-                    </div>
-                </div>
+                <div id="test-status" class="mt-2 small"></div>
             </div>
 
-            <div id="jintudi-traditional" class="tab-pane fade" style="display: none;">
-                <div class="card p-5 text-center text-muted">功能開發中...</div>
-            </div>
-            <div id="jintudi-smart" class="tab-pane fade" style="display: none;">
-                <div class="card p-5 text-center text-muted">功能開發中...</div>
-            </div>
-            <div id="eng1-traditional" class="tab-pane fade" style="display: none;">
-                <div class="card p-5 text-center text-muted">功能開發中...</div>
-            </div>
-            <div id="eng1-smart" class="tab-pane fade" style="display: none;">
-                <div class="card p-5 text-center text-muted">功能開發中...</div>
+            <div class="card p-4 mt-4">
+                <h5 class="card-title mb-3">最新 5 筆記錄</h5>
+                <div id="test-records" class="table-responsive">
+                    <div class="text-center text-muted">載入記錄中...</div>
+                </div>
             </div>
         </div>
+
+        <div id="jintudi-traditional" class="tab-pane fade" style="display: none;">
+            <div class="card p-5 text-center text-muted">功能開發中...</div>
+        </div>
+        <div id="jintudi-smart" class="tab-pane fade" style="display: none;">
+            <div class="card p-5 text-center text-muted">功能開發中...</div>
+        </div>
+        <div id="eng1-traditional" class="tab-pane fade" style="display: none;">
+            <div class="card p-5 text-center text-muted">功能開發中...</div>
+        </div>
+        <div id="eng1-smart" class="tab-pane fade" style="display: none;">
+            <div class="card p-5 text-center text-muted">功能開發中...</div>
+        </div>
+    </div>
     </div>
 
     <script>
@@ -467,11 +472,19 @@
         let currentPage = 1;
         const itemsPerPage = 10;
         let allSitesData = [];
+        let testSystemRefreshInterval = null;
 
         document.addEventListener('DOMContentLoaded', function () {
             refreshOverview();
-            refreshSiteData('test', 10);
-            setTabRefreshInterval('overview', 30000);
+            refreshSiteData('test', 1);
+
+            // 每2秒自動刷新測試系統數據
+            testSystemRefreshInterval = setInterval(() => {
+                const testTab = document.getElementById('test-system');
+                if (testTab && testTab.classList.contains('show')) {
+                    refreshSiteData('test', 1);
+                }
+            }, 2000);
         });
 
         // 切換頁籤功能 (配合 Bootstrap 樣式修改)
@@ -496,7 +509,7 @@
             const buttons = document.querySelectorAll(`button[onclick="switchTab('${tabId}')"]`);
             buttons.forEach(btn => btn.classList.add('active'));
 
-            if (tabId === 'test-system') refreshSiteData('test', 10);
+            if (tabId === 'test-system') refreshSiteData('test', 1);
             else if (tabId === 'overview') refreshOverview();
         }
 
@@ -539,17 +552,41 @@
                     document.getElementById(`${elementPrefix}-light-south`).textContent = data.light_south || baseLight;
                     document.getElementById(`${elementPrefix}-light-north`).textContent = data.light_north || baseLight;
 
-                    // 3. 更新推桿數據 & 自動計算功率 (P = V * I)
-                    const actVol = data.actuator_voltage || 0;
-                    const actCur = data.actuator_current || 0;
-                    // 如果後端有直接給 actuator_power 就用後端的，沒有就自己算
-                    const actPower = data.actuator_power ? data.actuator_power : (actVol * actCur);
+                    // 3. 更新樹莓派電源數據
+                    const rpiVoltageEl = document.getElementById(`${elementPrefix}-rpi-voltage`);
+                    const rpiCurrentEl = document.getElementById(`${elementPrefix}-rpi-current`);
+                    const rpiPowerEl = document.getElementById(`${elementPrefix}-rpi-power`);
+                    if (rpiVoltageEl) rpiVoltageEl.textContent = data.raspberry_pi_voltage ? data.raspberry_pi_voltage.toFixed(2) : '--';
+                    if (rpiCurrentEl) rpiCurrentEl.textContent = data.raspberry_pi_current ? (data.raspberry_pi_current * 1000).toFixed(1) : '--';
+                    if (rpiPowerEl) rpiPowerEl.textContent = data.raspberry_pi_power ? data.raspberry_pi_power.toFixed(2) : '--';
 
-                    document.getElementById(`${elementPrefix}-actuator-voltage`).textContent = actVol.toFixed(2);
-                    document.getElementById(`${elementPrefix}-actuator-current`).textContent = actCur.toFixed(3);
-                    document.getElementById(`${elementPrefix}-actuator-power`).textContent = actPower.toFixed(2);
-                    document.getElementById(`${elementPrefix}-actuator-angle`).textContent = data.actuator_angle ? data.actuator_angle.toFixed(1) : '--';
+                    // 4. 更新南北推桿
+                    const nsAngleEl = document.getElementById(`${elementPrefix}-ns-angle`);
+                    const nsExtEl = document.getElementById(`${elementPrefix}-ns-extension`);
+                    if (nsAngleEl) nsAngleEl.textContent = data.ns_actuator_angle ? data.ns_actuator_angle.toFixed(1) : '--';
+                    if (nsExtEl) nsExtEl.textContent = data.ns_actuator_extension ? data.ns_actuator_extension.toFixed(0) : '--';
 
+                    // 5. 更新東西推桿
+                    const ewAngleEl = document.getElementById(`${elementPrefix}-ew-angle`);
+                    const ewExtEl = document.getElementById(`${elementPrefix}-ew-extension`);
+                    if (ewAngleEl) ewAngleEl.textContent = data.ew_actuator_angle ? data.ew_actuator_angle.toFixed(1) : '--';
+                    if (ewExtEl) ewExtEl.textContent = data.ew_actuator_extension ? data.ew_actuator_extension.toFixed(0) : '--';
+
+                    // 6. 更新推桿總功率
+                    const actTotalVEl = document.getElementById(`${elementPrefix}-actuator-total-voltage`);
+                    const actTotalCEl = document.getElementById(`${elementPrefix}-actuator-total-current`);
+                    const actTotalPEl = document.getElementById(`${elementPrefix}-actuator-total-power`);
+                    if (actTotalVEl) actTotalVEl.textContent = data.actuator_total_voltage ? data.actuator_total_voltage.toFixed(2) : '--';
+                    if (actTotalCEl) actTotalCEl.textContent = data.actuator_total_current ? (data.actuator_total_current * 1000).toFixed(1) : '--';
+                    if (actTotalPEl) actTotalPEl.textContent = data.actuator_total_power ? data.actuator_total_power.toFixed(2) : '--';
+
+                    console.log('Data received:', {
+                        rpi_v: data.raspberry_pi_voltage,
+                        rpi_c: data.raspberry_pi_current,
+                        ns_angle: data.ns_actuator_angle,
+                        ew_angle: data.ew_actuator_angle,
+                        total_v: data.actuator_total_voltage
+                    });
                     // 4. 更新今日耗能 (Wh) - 暫時顯示 0.00
                     // 這裡預留了位置，等你後端計算好傳回 'actuator_daily_energy' 即可自動顯示
                     const energyEl = document.getElementById(`${elementPrefix}-actuator-energy`);
